CHATS_SIT/force-app/main/default/objects/T_PAYMT__c.object
<CustomObject>
    <description>Parent table containing payment information generated through the payroll process</description>
    <fields>
        <fullName>AMT_PMT__c</fullName>
        <description>Payment Amount</description>
        <label>Payment Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMT_SLOT_PMT__c</fullName>
        <label>Slot Contract Payment Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>County</description>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Payment County</relationshipLabel>
        <relationshipName>Payment_County</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_METHOD_PMT__c</fullName>
        <description>Payment Method</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00711</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS_PMT__c</fullName>
        <description>Payment Status</description>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00716</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_PAID_PMT__c</fullName>
        <description>Paid Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PERIOD_SERV__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Service Period ID</description>
        <label>Service Period ID</label>
        <referenceTo>T_SERV_PERIOD__c</referenceTo>
        <relationshipLabel>Service Period</relationshipLabel>
        <relationshipName>Service_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serv_Period_Eff_Beg_End_Date__c</fullName>
        <formula>TEXT(MONTH(IDN_PERIOD_SERV__r.DTE_BEGIN_EFFV__c))+&quot;-&quot; +TEXT(DAY(IDN_PERIOD_SERV__r.DTE_BEGIN_EFFV__c))+&quot;-&quot; +TEXT(YEAR(IDN_PERIOD_SERV__r.DTE_BEGIN_EFFV__c)) + &apos; to &apos; + TEXT(MONTH(IDN_PERIOD_SERV__r.DTE_END_EFFV__c))+&quot;-&quot; +TEXT(DAY(IDN_PERIOD_SERV__r.DTE_END_EFFV__c))+&quot;-&quot; +TEXT(YEAR(IDN_PERIOD_SERV__r.DTE_END_EFFV__c))</formula>
        <label>Service Period</label>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CDE_COUNTY__c</columns>
        <columns>IDN_PROVR__c</columns>
        <columns>DTE_PAID_PMT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDE_COUNTY__c</field>
            <operation>equals</operation>
            <value>el paso</value>
        </filters>
        <filters>
            <field>CDE_STATUS_PMT__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>