CHATS_SIT/force-app/main/default/objects/T_PAYMT__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>IDN_PROVR__c</columns>
    <columns>DTE_PAID_PMT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>