CHATS_SIT/force-app/main/default/objects/T_PAYMT__c/listViews/payments_with_filters.listView-meta.xml
<ListView>
    <fullName>payments_with_filters</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>DTE_PAID_PMT__c</columns>
    <columns>IDN_PROVR__c</columns>
    <columns>IDN_PERIOD_SERV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_COUNTY__c</field>
        <operation>equals</operation>
        <value>Pueblo</value>
    </filters>
    <filters>
        <field>Serv_Period_Eff_Beg_End_Date__c</field>
        <operation>greaterThan</operation>
        <value>808</value>
    </filters>
    <label>payments USE filters</label>
</ListView>